fix overflow x text slider

--- a/css/index.css
+++ b/css/index.css
@@ -125,7 +125,7 @@ body {
 } 
 
 .text-slider{
-    
+    overflow-x: hidden;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     scroll-snap-type: y proximity;
